--- a/ubiquity/chrome/locale/ja/coreubiquity.properties
+++ b/ubiquity/chrome/locale/ja/coreubiquity.properties
@@ -24,11 +24,12 @@ ubiquity.feedmanager.subscribe=インストール...
 
 #
 
+ubiquity.msgservice.defaultmsgtitle=Ubiquity 通知
+#
+
 ubiquity.skinsvc.saveyourskin=カスタムスキンを保存
 ubiquity.skinsvc.installskin=インストール...
 ubiquity.skinsvc.newskinfound=このページには Ubiquity のスキンが表示されています。スキンをインストールするには右側のボタンをクリックしてください。
 ubiquity.skinsvc.skinchanged=スキンを変更しました。
-#
-
 ubiquity.stylishfeedplug.newuserstylefound=このページには、Ubiquity で利用可能な Stylish 用のユーザスタイルが含まれています。インストールするには右のボタンをクリックしてください。
 ubiquity.stylishfeedplug.subscriptionsuccess=ユーザスタイルがインストールされました！
