--- a/ubiquity/chrome/locale/nl/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/nl/aboutubiquitytutorial.properties
@@ -5,6 +5,7 @@ tutorial.fromthestart=Klik hier om van het begin te starten.
 tutorial.fromthemiddle=Start ergens anders:
 tutorial.howtostart=Hoe Ubiquity opstarten
 tutorial.previews=Voorbeeldweergave (Weather)
+tutorial.abbreviations=Afkortingen (Rekenmachine)
 tutorial.suggestions=De suggestie lijst (Calculate, Google)
 tutorial.selecting=Selecteren en uitvoeren (Translate, Map)
 tutorial.morecommands=Hoe help vinden en meer opdrachten leren
