--- a/ubiquity/chrome/locale/nl/coreubiquity.properties
+++ b/ubiquity/chrome/locale/nl/coreubiquity.properties
@@ -1,3 +1,4 @@
+extensions.ubiquity@labs.mozilla.com.description=Een extensie dat toestaat om dynamische opdrachten in Firefox te gebruiken.
 #
 
 #
@@ -23,12 +24,14 @@ ubiquity.feedmanager.subscribe=Inschrijven...
 
 #
 
+ubiquity.msgservice.defaultmsgtitle=Ubiquity melding
+#
+
+#
+
 ubiquity.skinsvc.saveyourskin=Uw thema opslaan
 ubiquity.skinsvc.installskin=Installeren...
 ubiquity.skinsvc.newskinfound=Deze pagina bevat een Ubiquity thema. Als u dit thema wilt installeren klik dan op de rechtse knop.
-#
-
-#
-
+ubiquity.skinsvc.skinchanged=Uw thema is gewijzigd!
 ubiquity.stylishfeedplug.newuserstylefound=Deze pagina bevat een stijlblad die Ubiquity kan uitvoeren. Als u zich wilt inschrijven klik dan op de rechtse knop.
 ubiquity.stylishfeedplug.subscriptionsuccess=Succesvol ingeschreven op het stijlblad!
