--- a/ubiquity/chrome/locale/nl/devubiquity.properties
+++ b/ubiquity/chrome/locale/nl/devubiquity.properties
@@ -1,2 +1,36 @@
 #
 
+ubiquity.quicklaunch.sorrymessage=Sorry, maar het lijkt alsof u OS X niet gebruikt. Deze feature is nog niet beschikbaar.
+ubiquity.quicklaunch.enablerunning=Desktop Quicklaunch is reeds ingeschakeld.
+ubiquity.quicklaunch.enableconfirm=Desktop QuickLaunch is nu ingeschakeld.
+ubiquity.quicklaunch.erorr=Auch, er trad een fout op. Sorry!
+ubiquity.playpen.combo=combinatie:
+ubiquity.playpen.argstring=argString:
+ubiquity.playpen.score=score:
+ubiquity.playpen.noscore=geen score
+ubiquity.playpen.null=null
+ubiquity.playpen.done=klaar
+ubiquity.playpen.duration=DUUR:
+ubiquity.playpen.average=GEMIDDELDE:
+ubiquity.playpen.step=stap
+ubiquity.playpen.winner=winnaar
+ubiquity.playpen.role=rol:
+ubiquity.playpen.name=naam:
+ubiquity.playpen.step1=stap 1: woorden splitsen
+ubiquity.playpen.step2=stap 2: mogelijke werkwoorden kiezen
+ubiquity.playpen.step4=stap 4: groepeer in argumenten
+ubiquity.playpen.step6=stap 6: vervang genormaliseerde argumenten
+ubiquity.playpen.step8=stap 8: gesuggereerde werkwoorden
+ubiquity.playpen.step9=stap 8-11: afmaken
+ubiquity.playpen.parsespossible=mogelijke parses
+ubiquity.playpen.parsedverbs=parses met werkwoorden
+ubiquity.testsuite.testsingular=test
+ubiquity.testsuite.testplural=testen
+ubiquity.testsuite.runerror=Fout tijdens draaien test suite: %S
+ubiquity.tuner.Guess2=Mogelijk.
+ubiquity.tuner.Guess3=Waarschijnlijk.
+ubiquity.tuner.Guess4=Perfect!
+ubiquity.tuner.Match1=Slecht.
+ubiquity.tuner.Match2=Oké.
+ubiquity.tuner.Match3=Goed.
+ubiquity.tuner.Match4=Exact!
