--- a/ubiquity/chrome/locale/pl-PL/coreubiquity.properties
+++ b/ubiquity/chrome/locale/pl-PL/coreubiquity.properties
@@ -24,13 +24,14 @@ ubiquity.feedmanager.subscribe=Subskrybuj…
 
 # /modules/skinsvc.js
 
-ubiquity.skinsvc.saveyourskin=Zapisz swój motyw
-ubiquity.skinsvc.installskin=Instaluj…
-ubiquity.skinsvc.newskinfound=Ta strona zawiera motyw Ubiquity. Jeśli chcesz go zainstalować, naciśnij przycisk po prawej stronie.
-ubiquity.skinsvc.skinchanged=Motyw został zmieniony!
+ubiquity.msgservice.defaultmsgtitle=Powiadomienia Ubiquity
 ############################
 
 # /modules/stylish_feed_plugin.js
 
+ubiquity.skinsvc.saveyourskin=Zapisz swój motyw
+ubiquity.skinsvc.installskin=Instaluj…
+ubiquity.skinsvc.newskinfound=Ta strona zawiera motyw Ubiquity. Jeśli chcesz go zainstalować, naciśnij przycisk po prawej stronie.
+ubiquity.skinsvc.skinchanged=Motyw został zmieniony!
 ubiquity.stylishfeedplug.newuserstylefound=Ta strona zawiera styl Stylish, który może być uruchomiony przez Ubiquity. Jeśli chcesz je subskrybować, naciśnij przycisk po prawej stronie.
 ubiquity.stylishfeedplug.subscriptionsuccess=Styl został zasubskrybowany!
