--- a/ubiquity/chrome/locale/ca/coreubiquity.properties
+++ b/ubiquity/chrome/locale/ca/coreubiquity.properties
@@ -24,13 +24,14 @@ ubiquity.feedmanager.subscribe=Subscriu-m'hi...
 
 #
 
+ubiquity.msgservice.defaultmsgtitle=Notificació de l'Ubiquity
+#
+
+#
+
 ubiquity.skinsvc.saveyourskin=Desa la vostra aparença
 ubiquity.skinsvc.installskin=Instal·la...
 ubiquity.skinsvc.newskinfound=Aquesta pàgina conté una aparença de l'Ubiquity. Si voleu instal·lar-la, cliqueu al botó de la dreta.
 ubiquity.skinsvc.skinchanged=S'ha canviat la vostra aparença!
-#
-
-#
-
 ubiquity.stylishfeedplug.newuserstylefound=Aquesta pàgina conté un estil d'usuari que l'Ubiquity pot executar. Si voleu subscriure-vos-hi, cliqueu al botó de la dreta.
 ubiquity.stylishfeedplug.subscriptionsuccess=Us heu subscrit a l'estil d'usuari amb èxit!
