--- a/ubiquity/chrome/locale/pl-PL/coreubiquity.dtd
+++ b/ubiquity/chrome/locale/pl-PL/coreubiquity.dtd
@@ -1,2 +1,2 @@
 <!-- chrome/content/browser.xul -->
-<!ENTITY ubiquity.toolbar.tooltip "Otwiera lub zamyka Ubiquity">
+<!ENTITY ubiquity.toolbar.tooltip "Otwiera Ubiquity">
